appId: com.example.ex3App
---
- launchApp
- runFlow:
    when:
      visible: Continue
    commands:
      - tapOn: Continue
- runFlow:
    when:
      visible: 続ける
    commands:
      - tapOn: 続ける
- takeScreenshot: ex3_01_signin
- tapOn: 'Username input'
- inputText: 'Sora'
- tapOn: 'Password input'
- inputText: 'pass'
- runFlow:
    when:
      visible: 完了
    commands:
      - tapOn: 完了
- runFlow:
    when:
      visible: done
    commands:
      - tapOn: done
- tapOn: 'Mock Sign In / Sign Up'
- tapOn: 'Sign in button'
- assertVisible: 'Welcome, Sora'
- takeScreenshot: ex3_02_overview
- tapOn: 'India History Explorer button'
- assertVisible: 'India History Explorer'
- tapOn: 'Gupta Empire
320-550 CE'
- assertVisible: 'Kalidasa
Sanskrit literary genius'
- takeScreenshot: ex3_03_lists
- tapOn: 'Kalidasa
Sanskrit literary genius'
- assertVisible: 'Entry Details'
- takeScreenshot: ex3_04_detail
- tapOn: 'Back button'
- tapOn: 'Sort button
Order: oldest first'
- assertVisible: 'Sort button
Order: newest first'
- tapOn: 'Open account menu'
- tapOn: 'Log out'
- assertVisible: 'Mock Sign In / Sign Up'
- takeScreenshot: ex3_05_logout
